--- a/.github/workflows/main_labolsitaweb.yml
+++ b/.github/workflows/main_labolsitaweb.yml
@@ -78,4 +78,9 @@ jobs:
         with:
           app-name: 'LaBolsitaWeb'
           slot-name: 'Production'
-          
+      
+      - name: Configure App Service timeout
+        run: |
+          az webapp config appsettings set --resource-group <app-service-labolsita> --name LaBolsitaWeb --settings WEBSITES_CONTAINER_START_TIME_LIMIT=120
+        env:
+          AZURE_WEBAPP_PUBLISH_PROFILE: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}    
